--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
 		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/typeorm": "^10.0.2",
+		"class-validator": "^0.14.1",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.0",
-		"rxjs": "^7.8.1"
+		"rxjs": "^7.8.1",
+		"sqlite3": "^5.1.7",
+		"typeorm": "^0.3.20"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^10.0.0",
+		"@nestjs/config": "^3.2.3",
 		"@nestjs/schematics": "^10.0.0",
 		"@nestjs/testing": "^10.0.0",
 		"@types/express": "^4.17.17",
